-- Split migration: monolith battles(type=QUIZ/POLL/VOTE) -> quizzes / poll_contents
-- This script is idempotent for partially migrated environments.

-- 0) Create target tables
CREATE TABLE IF NOT EXISTS quizzes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(200) NOT NULL,
    target_date DATE,
    total_participants_count BIGINT NOT NULL DEFAULT 0,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE IF NOT EXISTS quiz_options (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    quiz_id BIGINT NOT NULL,
    label VARCHAR(10) NOT NULL,
    text VARCHAR(300) NOT NULL,
    detail_text VARCHAR(1000),
    is_correct BOOLEAN NOT NULL DEFAULT FALSE,
    display_order INTEGER NOT NULL DEFAULT 0,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE IF NOT EXISTS poll_contents (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title_prefix VARCHAR(200) NOT NULL,
    title_suffix VARCHAR(200),
    target_date DATE,
    total_participants_count BIGINT NOT NULL DEFAULT 0,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE IF NOT EXISTS poll_options (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    poll_id BIGINT NOT NULL,
    label VARCHAR(10) NOT NULL,
    title VARCHAR(200) NOT NULL,
    display_order INTEGER NOT NULL DEFAULT 0,
    vote_count BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE IF NOT EXISTS quiz_user_votes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    quiz_id BIGINT NOT NULL,
    option_id BIGINT NOT NULL,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

CREATE TABLE IF NOT EXISTS poll_user_votes (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    poll_id BIGINT NOT NULL,
    option_id BIGINT NOT NULL,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);

-- 1) Constraints and indexes
DO $$
BEGIN
    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_quiz_options_quiz') THEN
        ALTER TABLE quiz_options
            ADD CONSTRAINT fk_quiz_options_quiz
            FOREIGN KEY (quiz_id) REFERENCES quizzes(id) ON DELETE CASCADE;
    END IF;

    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_poll_options_poll') THEN
        ALTER TABLE poll_options
            ADD CONSTRAINT fk_poll_options_poll
            FOREIGN KEY (poll_id) REFERENCES poll_contents(id) ON DELETE CASCADE;
    END IF;

    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_quiz_user_votes_user') THEN
        ALTER TABLE quiz_user_votes
            ADD CONSTRAINT fk_quiz_user_votes_user
            FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE;
    END IF;
    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_quiz_user_votes_quiz') THEN
        ALTER TABLE quiz_user_votes
            ADD CONSTRAINT fk_quiz_user_votes_quiz
            FOREIGN KEY (quiz_id) REFERENCES quizzes(id) ON DELETE CASCADE;
    END IF;
    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_quiz_user_votes_option') THEN
        ALTER TABLE quiz_user_votes
            ADD CONSTRAINT fk_quiz_user_votes_option
            FOREIGN KEY (option_id) REFERENCES quiz_options(id) ON DELETE CASCADE;
    END IF;

    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_poll_user_votes_user') THEN
        ALTER TABLE poll_user_votes
            ADD CONSTRAINT fk_poll_user_votes_user
            FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE;
    END IF;
    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_poll_user_votes_poll') THEN
        ALTER TABLE poll_user_votes
            ADD CONSTRAINT fk_poll_user_votes_poll
            FOREIGN KEY (poll_id) REFERENCES poll_contents(id) ON DELETE CASCADE;
    END IF;
    IF NOT EXISTS (SELECT 1 FROM pg_constraint WHERE conname = 'fk_poll_user_votes_option') THEN
        ALTER TABLE poll_user_votes
            ADD CONSTRAINT fk_poll_user_votes_option
            FOREIGN KEY (option_id) REFERENCES poll_options(id) ON DELETE CASCADE;
    END IF;
END $$;

CREATE UNIQUE INDEX IF NOT EXISTS uk_quiz_options_quiz_label ON quiz_options(quiz_id, label);
CREATE UNIQUE INDEX IF NOT EXISTS uk_poll_options_poll_label ON poll_options(poll_id, label);
CREATE UNIQUE INDEX IF NOT EXISTS uk_quiz_user_votes_user_quiz ON quiz_user_votes(user_id, quiz_id);
CREATE UNIQUE INDEX IF NOT EXISTS uk_poll_user_votes_user_poll ON poll_user_votes(user_id, poll_id);

CREATE INDEX IF NOT EXISTS idx_quiz_options_quiz_order ON quiz_options(quiz_id, display_order, label, id);
CREATE INDEX IF NOT EXISTS idx_poll_options_poll_order ON poll_options(poll_id, display_order, label, id);
CREATE INDEX IF NOT EXISTS idx_quiz_user_votes_quiz_id ON quiz_user_votes(quiz_id);
CREATE INDEX IF NOT EXISTS idx_poll_user_votes_poll_id ON poll_user_votes(poll_id);

-- 2) Ensure legacy source columns for migration
DO $$
BEGIN
    IF to_regclass('public.battles') IS NOT NULL THEN
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS type VARCHAR(20);
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS title_prefix VARCHAR(200);
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS title_suffix VARCHAR(200);
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS item_a VARCHAR(255);
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS item_a_desc TEXT;
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS item_b VARCHAR(255);
        ALTER TABLE battles ADD COLUMN IF NOT EXISTS item_b_desc TEXT;
    END IF;

    IF to_regclass('public.battle_options') IS NOT NULL THEN
        ALTER TABLE battle_options ADD COLUMN IF NOT EXISTS quote TEXT;
        ALTER TABLE battle_options ADD COLUMN IF NOT EXISTS is_correct BOOLEAN DEFAULT FALSE;
        ALTER TABLE battle_options ADD COLUMN IF NOT EXISTS display_order INTEGER;
    END IF;
END $$;

-- 3) Optional migration from old vote_* content tables
DO $$
BEGIN
    IF to_regclass('public.vote_contents') IS NOT NULL THEN
        INSERT INTO poll_contents (id, title_prefix, title_suffix, target_date, total_participants_count, status, created_at, updated_at)
        SELECT
            vc.id,
            COALESCE(NULLIF(vc.title_prefix, ''), '투표'),
            vc.title_suffix,
            vc.target_date,
            COALESCE(vc.total_participants_count, 0),
            CASE WHEN vc.status = 'PUBLISHED' THEN 'PUBLISHED'
                 WHEN vc.status = 'ARCHIVED' THEN 'ARCHIVED'
                 ELSE 'PENDING' END,
            vc.created_at,
            vc.updated_at
        FROM vote_contents vc
        WHERE NOT EXISTS (SELECT 1 FROM poll_contents p WHERE p.id = vc.id);
    END IF;

    IF to_regclass('public.vote_options') IS NOT NULL THEN
        INSERT INTO poll_options (id, poll_id, label, title, display_order, vote_count, created_at, updated_at)
        SELECT
            vo.id,
            vo.vote_id,
            vo.label,
            vo.title,
            COALESCE(vo.display_order, CASE vo.label WHEN 'A' THEN 1 WHEN 'B' THEN 2 WHEN 'C' THEN 3 WHEN 'D' THEN 4 ELSE 99 END),
            COALESCE(vo.vote_count, 0),
            vo.created_at,
            vo.updated_at
        FROM vote_options vo
        WHERE NOT EXISTS (SELECT 1 FROM poll_options po WHERE po.id = vo.id);
    END IF;
END $$;

-- 4) Migrate monolith QUIZ/POLL rows into new parent/option tables
DO $$
BEGIN
    IF to_regclass('public.battles') IS NOT NULL THEN
        INSERT INTO quizzes (id, title, target_date, total_participants_count, status, created_at, updated_at)
        SELECT
            b.id,
            COALESCE(NULLIF(b.title, ''), '퀴즈'),
            b.target_date,
            COALESCE(b.total_participants, 0),
            CASE WHEN b.status = 'PUBLISHED' THEN 'PUBLISHED'
                 WHEN b.status = 'ARCHIVED' THEN 'ARCHIVED'
                 ELSE 'PENDING' END,
            b.created_at,
            b.updated_at
        FROM battles b
        WHERE UPPER(COALESCE(b.type, 'BATTLE')) = 'QUIZ'
          AND NOT EXISTS (SELECT 1 FROM quizzes q WHERE q.id = b.id);

        INSERT INTO poll_contents (id, title_prefix, title_suffix, target_date, total_participants_count, status, created_at, updated_at)
        SELECT
            b.id,
            COALESCE(NULLIF(b.title_prefix, ''), NULLIF(b.title, ''), '투표'),
            NULLIF(b.title_suffix, ''),
            b.target_date,
            COALESCE(b.total_participants, 0),
            CASE WHEN b.status = 'PUBLISHED' THEN 'PUBLISHED'
                 WHEN b.status = 'ARCHIVED' THEN 'ARCHIVED'
                 ELSE 'PENDING' END,
            b.created_at,
            b.updated_at
        FROM battles b
        WHERE UPPER(COALESCE(b.type, 'BATTLE')) IN ('POLL', 'VOTE')
          AND NOT EXISTS (SELECT 1 FROM poll_contents p WHERE p.id = b.id);
    END IF;

    IF to_regclass('public.battle_options') IS NOT NULL AND to_regclass('public.battles') IS NOT NULL THEN
        INSERT INTO quiz_options (id, quiz_id, label, text, detail_text, is_correct, display_order, created_at, updated_at)
        SELECT
            bo.id,
            bo.battle_id,
            bo.label,
            COALESCE(NULLIF(bo.title, ''),
                     CASE bo.label WHEN 'A' THEN b.item_a WHEN 'B' THEN b.item_b ELSE NULL END,
                     '선택지'),
            COALESCE(NULLIF(bo.quote, ''),
                     CASE bo.label WHEN 'A' THEN b.item_a_desc WHEN 'B' THEN b.item_b_desc ELSE NULL END),
            COALESCE(bo.is_correct, FALSE),
            COALESCE(bo.display_order, CASE bo.label WHEN 'A' THEN 1 WHEN 'B' THEN 2 WHEN 'C' THEN 3 WHEN 'D' THEN 4 ELSE 99 END),
            bo.created_at,
            bo.updated_at
        FROM battle_options bo
        JOIN battles b ON b.id = bo.battle_id
        WHERE UPPER(COALESCE(b.type, 'BATTLE')) = 'QUIZ'
          AND NOT EXISTS (SELECT 1 FROM quiz_options qo WHERE qo.id = bo.id);

        INSERT INTO poll_options (id, poll_id, label, title, display_order, vote_count, created_at, updated_at)
        SELECT
            bo.id,
            bo.battle_id,
            bo.label,
            COALESCE(NULLIF(bo.title, ''),
                     CASE bo.label WHEN 'A' THEN b.item_a WHEN 'B' THEN b.item_b ELSE NULL END,
                     '선택지'),
            COALESCE(bo.display_order, CASE bo.label WHEN 'A' THEN 1 WHEN 'B' THEN 2 WHEN 'C' THEN 3 WHEN 'D' THEN 4 ELSE 99 END),
            COALESCE(bo.vote_count, 0),
            bo.created_at,
            bo.updated_at
        FROM battle_options bo
        JOIN battles b ON b.id = bo.battle_id
        WHERE UPPER(COALESCE(b.type, 'BATTLE')) IN ('POLL', 'VOTE')
          AND NOT EXISTS (SELECT 1 FROM poll_options po WHERE po.id = bo.id);
    END IF;
END $$;

-- 5) Migrate votes(votes table) into quiz_user_votes / poll_user_votes
DO $$
BEGIN
    IF to_regclass('public.votes') IS NOT NULL
        AND to_regclass('public.battles') IS NOT NULL
        AND to_regclass('public.quiz_options') IS NOT NULL THEN

        INSERT INTO quiz_user_votes (user_id, quiz_id, option_id, created_at, updated_at)
        SELECT
            src.user_id,
            src.quiz_id,
            src.option_id,
            src.created_at,
            src.updated_at
        FROM (
            SELECT DISTINCT ON (v.user_id, v.battle_id)
                v.user_id,
                v.battle_id AS quiz_id,
                COALESCE(v.post_vote_option_id, v.pre_vote_option_id) AS option_id,
                v.created_at,
                v.updated_at
            FROM votes v
            JOIN battles b ON b.id = v.battle_id
            WHERE UPPER(COALESCE(b.type, 'BATTLE')) = 'QUIZ'
              AND COALESCE(v.post_vote_option_id, v.pre_vote_option_id) IS NOT NULL
            ORDER BY v.user_id, v.battle_id, v.updated_at DESC, v.id DESC
        ) src
        JOIN quiz_options qo ON qo.id = src.option_id AND qo.quiz_id = src.quiz_id
        ON CONFLICT (user_id, quiz_id) DO UPDATE
        SET option_id = EXCLUDED.option_id,
            updated_at = EXCLUDED.updated_at;
    END IF;

    IF to_regclass('public.votes') IS NOT NULL
        AND to_regclass('public.battles') IS NOT NULL
        AND to_regclass('public.poll_options') IS NOT NULL THEN

        INSERT INTO poll_user_votes (user_id, poll_id, option_id, created_at, updated_at)
        SELECT
            src.user_id,
            src.poll_id,
            src.option_id,
            src.created_at,
            src.updated_at
        FROM (
            SELECT DISTINCT ON (v.user_id, v.battle_id)
                v.user_id,
                v.battle_id AS poll_id,
                COALESCE(v.post_vote_option_id, v.pre_vote_option_id) AS option_id,
                v.created_at,
                v.updated_at
            FROM votes v
            JOIN battles b ON b.id = v.battle_id
            WHERE UPPER(COALESCE(b.type, 'BATTLE')) IN ('POLL', 'VOTE')
              AND COALESCE(v.post_vote_option_id, v.pre_vote_option_id) IS NOT NULL
            ORDER BY v.user_id, v.battle_id, v.updated_at DESC, v.id DESC
        ) src
        JOIN poll_options po ON po.id = src.option_id AND po.poll_id = src.poll_id
        ON CONFLICT (user_id, poll_id) DO UPDATE
        SET option_id = EXCLUDED.option_id,
            updated_at = EXCLUDED.updated_at;
    END IF;
END $$;

-- 6) Recalculate counters
WITH quiz_counts AS (
    SELECT quiz_id, COUNT(*)::BIGINT AS cnt
    FROM quiz_user_votes
    GROUP BY quiz_id
)
UPDATE quizzes q
SET total_participants_count = qc.cnt
FROM quiz_counts qc
WHERE q.id = qc.quiz_id
  AND q.total_participants_count IS DISTINCT FROM qc.cnt;

UPDATE quizzes q
SET total_participants_count = 0
WHERE q.total_participants_count IS DISTINCT FROM 0
  AND NOT EXISTS (SELECT 1 FROM quiz_user_votes qv WHERE qv.quiz_id = q.id);

WITH poll_counts AS (
    SELECT poll_id, COUNT(*)::BIGINT AS cnt
    FROM poll_user_votes
    GROUP BY poll_id
)
UPDATE poll_contents p
SET total_participants_count = pc.cnt
FROM poll_counts pc
WHERE p.id = pc.poll_id
  AND p.total_participants_count IS DISTINCT FROM pc.cnt;

UPDATE poll_contents p
SET total_participants_count = 0
WHERE p.total_participants_count IS DISTINCT FROM 0
  AND NOT EXISTS (SELECT 1 FROM poll_user_votes pv WHERE pv.poll_id = p.id);

WITH option_counts AS (
    SELECT option_id, COUNT(*)::BIGINT AS cnt
    FROM poll_user_votes
    GROUP BY option_id
)
UPDATE poll_options po
SET vote_count = oc.cnt
FROM option_counts oc
WHERE po.id = oc.option_id
  AND po.vote_count IS DISTINCT FROM oc.cnt;

UPDATE poll_options po
SET vote_count = 0
WHERE po.vote_count IS DISTINCT FROM 0
  AND NOT EXISTS (SELECT 1 FROM poll_user_votes pv WHERE pv.option_id = po.id);

-- 7) Remove monolith rows for QUIZ/POLL/VOTE (delete FK dependents first)
DO $$
BEGIN
    IF to_regclass('public.battles') IS NULL THEN
        RETURN;
    END IF;

    IF to_regclass('public.comment_likes') IS NOT NULL
       AND to_regclass('public.perspective_comments') IS NOT NULL
       AND to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM comment_likes cl
        USING perspective_comments pc, perspectives p, battles b
        WHERE cl.comment_id = pc.id
          AND pc.perspective_id = p.id
          AND p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.comment_reports') IS NOT NULL
       AND to_regclass('public.perspective_comments') IS NOT NULL
       AND to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM comment_reports cr
        USING perspective_comments pc, perspectives p, battles b
        WHERE cr.comment_id = pc.id
          AND pc.perspective_id = p.id
          AND p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.perspective_comments') IS NOT NULL
       AND to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM perspective_comments pc
        USING perspectives p, battles b
        WHERE pc.perspective_id = p.id
          AND p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.perspective_likes') IS NOT NULL
       AND to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM perspective_likes pl
        USING perspectives p, battles b
        WHERE pl.perspective_id = p.id
          AND p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.perspective_reports') IS NOT NULL
       AND to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM perspective_reports pr
        USING perspectives p, battles b
        WHERE pr.perspective_id = p.id
          AND p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.perspectives') IS NOT NULL THEN
        DELETE FROM perspectives p
        USING battles b
        WHERE p.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenario_scripts') IS NOT NULL
       AND to_regclass('public.scenario_nodes') IS NOT NULL
       AND to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenario_scripts ss
        USING scenario_nodes sn, scenarios s, battles b
        WHERE ss.node_id = sn.id
          AND sn.scenario_id = s.id
          AND s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenario_options') IS NOT NULL
       AND to_regclass('public.scenario_nodes') IS NOT NULL
       AND to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenario_options so
        USING scenario_nodes sn, scenarios s, battles b
        WHERE so.node_id = sn.id
          AND sn.scenario_id = s.id
          AND s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenario_nodes') IS NOT NULL
       AND to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenario_nodes sn
        USING scenarios s, battles b
        WHERE sn.scenario_id = s.id
          AND s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenario_audios') IS NOT NULL
       AND to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenario_audios sa
        USING scenarios s, battles b
        WHERE sa.scenario_id = s.id
          AND s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenario_voice_settings') IS NOT NULL
       AND to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenario_voice_settings svs
        USING scenarios s, battles b
        WHERE svs.scenario_id = s.id
          AND s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.scenarios') IS NOT NULL THEN
        DELETE FROM scenarios s
        USING battles b
        WHERE s.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.user_battles') IS NOT NULL THEN
        DELETE FROM user_battles ub
        USING battles b
        WHERE ub.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.battle_option_tags') IS NOT NULL
       AND to_regclass('public.battle_options') IS NOT NULL THEN
        DELETE FROM battle_option_tags bot
        USING battle_options bo, battles b
        WHERE bot.battle_option_id = bo.id
          AND bo.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.battle_tags') IS NOT NULL THEN
        DELETE FROM battle_tags bt
        USING battles b
        WHERE bt.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.votes') IS NOT NULL THEN
        DELETE FROM votes v
        USING battles b
        WHERE v.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    IF to_regclass('public.battle_options') IS NOT NULL THEN
        DELETE FROM battle_options bo
        USING battles b
        WHERE bo.battle_id = b.id
          AND UPPER(COALESCE(b.type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
    END IF;

    DELETE FROM battles
    WHERE UPPER(COALESCE(type, 'BATTLE')) IN ('QUIZ', 'POLL', 'VOTE');
END $$;

-- 8) Drop unused columns
DO $$
BEGIN
    IF to_regclass('public.battles') IS NOT NULL THEN
        ALTER TABLE battles DROP COLUMN IF EXISTS type;
        ALTER TABLE battles DROP COLUMN IF EXISTS title_prefix;
        ALTER TABLE battles DROP COLUMN IF EXISTS title_suffix;
        ALTER TABLE battles DROP COLUMN IF EXISTS item_a;
        ALTER TABLE battles DROP COLUMN IF EXISTS item_a_desc;
        ALTER TABLE battles DROP COLUMN IF EXISTS item_b;
        ALTER TABLE battles DROP COLUMN IF EXISTS item_b_desc;
    END IF;

    IF to_regclass('public.battle_options') IS NOT NULL THEN
        ALTER TABLE battle_options DROP COLUMN IF EXISTS quote;
        ALTER TABLE battle_options DROP COLUMN IF EXISTS is_correct;
        ALTER TABLE battle_options DROP COLUMN IF EXISTS explanation;
        ALTER TABLE battle_options DROP COLUMN IF EXISTS is_correct_explanation;
    END IF;

    IF to_regclass('public.quizzes') IS NOT NULL THEN
        ALTER TABLE quizzes DROP COLUMN IF EXISTS description;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS comment_count;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS view_count;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS audio_duration;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS thumbnail_url;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS title_prefix;
        ALTER TABLE quizzes DROP COLUMN IF EXISTS title_suffix;
    END IF;

    IF to_regclass('public.poll_contents') IS NOT NULL THEN
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS description;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS comment_count;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS view_count;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS audio_duration;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS thumbnail_url;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS summary;
        ALTER TABLE poll_contents DROP COLUMN IF EXISTS title;
    END IF;
END $$;

-- 9) Remove unused tag split tables (battle_tags / battle_option_tags remain)
DROP TABLE IF EXISTS category_tags CASCADE;
DROP TABLE IF EXISTS philosopher_tags CASCADE;
DROP TABLE IF EXISTS value_tags CASCADE;

DROP TABLE IF EXISTS quiz_tags CASCADE;
DROP TABLE IF EXISTS quiz_option_value_tags CASCADE;
DROP TABLE IF EXISTS poll_tags CASCADE;
DROP TABLE IF EXISTS poll_option_value_tags CASCADE;
DROP TABLE IF EXISTS vote_tags CASCADE;
DROP TABLE IF EXISTS vote_option_value_tags CASCADE;
DROP TABLE IF EXISTS battle_option_philosopher_tags CASCADE;
DROP TABLE IF EXISTS battle_option_value_tags CASCADE;

-- 10) Remove deprecated vote content tables
DROP TABLE IF EXISTS vote_options CASCADE;
DROP TABLE IF EXISTS vote_contents CASCADE;
