@startuml vote
hide circle
hide methods
skinparam linetype ortho

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR(255)
  nickname : VARCHAR(50)
}

entity "battles" as battles {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(255)
}

entity "battle_options" as battle_options {
  * id : BIGINT <<PK>>
  --
  battle_id : BIGINT <<FK>>
  label : VARCHAR(10)
}

entity "quizzes" as quizzes {
  * id : BIGINT <<PK>>
  --
  title : VARCHAR(200)
  total_participants_count : BIGINT
}

entity "quiz_options" as quiz_options {
  * id : BIGINT <<PK>>
  --
  quiz_id : BIGINT <<FK>>
  label : VARCHAR(10)
  is_correct : BOOLEAN
}

entity "poll_contents" as poll_contents {
  * id : BIGINT <<PK>>
  --
  title_prefix : VARCHAR(200)
  title_suffix : VARCHAR(200)
  total_participants_count : BIGINT
}

entity "poll_options" as poll_options {
  * id : BIGINT <<PK>>
  --
  poll_id : BIGINT <<FK>>
  label : VARCHAR(10)
  vote_count : BIGINT
}

entity "votes" as votes {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  battle_id : BIGINT <<FK>>
  pre_vote_option_id : BIGINT <<FK, nullable>>
  post_vote_option_id : BIGINT <<FK, nullable>>
  is_tts_listened : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "quiz_user_votes" as quiz_user_votes {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  quiz_id : BIGINT <<FK>>
  option_id : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "poll_user_votes" as poll_user_votes {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  poll_id : BIGINT <<FK>>
  option_id : BIGINT <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

users ||--o{ votes : votes
battles ||--o{ votes : target
battle_options ||--o{ votes : pre/post option

users ||--o{ quiz_user_votes : votes
quizzes ||--o{ quiz_user_votes : target
quiz_options ||--o{ quiz_user_votes : selected

users ||--o{ poll_user_votes : votes
poll_contents ||--o{ poll_user_votes : target
poll_options ||--o{ poll_user_votes : selected

note bottom of votes
  Battle 투표(사전/사후) 전용 테이블
end note

note bottom of quiz_user_votes
  Quiz 정답 제출 투표 테이블
end note

note bottom of poll_user_votes
  Poll 선택 투표 테이블
end note

@enduml
